# hotel

./: CHANGELOG.md  LICENSE  README.md  flake.nix  hotel.cabal
src/System/: Log.hs
test/: Main.hs
